# Rempy

./: pyproject.toml
project/: .gitignore  README.md  docker-compose.yml  pyproject.toml
project/back/: Dockerfile  FastMarching.py  pyproject.toml  requirements.txt  shell.nix  stats.py  test_benchmark.py
project/back/benchmarks/: models.py  serializer.py  urls.py  views.py
project/back/config/: settings.py  urls.py
project/back/runner/: FastMarching.py  FastMarchingNumba.py  tasks.py
project/front/: Dockerfile  compute.py  get_df.py  index.py  pyproject.toml  stats.py  tests_dash.py
