[project]
name = "rempy-project"
version = "0.1.0"
authors = ["Clément GREGOIRE, Thomas SCCHEEPERS"]
requires-python = "==3.12.*"
dependencies = [
    "dash>=2.18.2",
    "dash-ag-grid>=33.3.3",
    "dtale==3.19.1",
    "imageio==2.37.2",
    "lxml==6.0.2",
    "matplotlib==3.10.8",
    "notebook==7.5.3",
    "numba==0.63.1",
    "numpy==2.3.5",
    "pandas==3.0.0",
    "ruff>=0.15.1",
    "scikit-learn>=1.8.0",
]

[tool.uv.workspace]
members = [
    "project",
]
