[project]
name = "rempy-back"
version = "0.1.0"
authors = ["Clément GREGOIRE, Thomas SCCHEEPERS"]
requires-python = "==3.12.*"
dependencies = [
    "django>=5.0",
    "djangorestframework",
    "django-cors-headers",
    "psycopg2",
    "Pillow",
    "numpy",
    "imageio",
    "numba",
    "llvmlite",
    "pandas",
    "matplotlib",
    "scipy",
]

[tool.uv.workspace]
members = [
    "project",
]
