[project]
name = "frontend"
version = "0.1.0"
authors = [
    { name = "Clément GREGOIRE" },
    { name = "Thomas SCCHEEPERS" }
]
requires-python = "==3.12.*"
dependencies = [
    "dash>=2.18.2",
    "dash-ag-grid>=33.3.3",
    "ruff>=0.15.1",
    "pandas",
    "requests",
]

[tool.uv.workspace]
members = [
    "project",
]
